dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__settings_with_alert.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Settings ──────────────────────────────────────────────────────────┐"
"│                                                                    │"
"│      failed to resolve server address: dessplay.brage.info:4433    │"
"│                                                                    │"
"│      Username: [ok]                                                │"
"│      alice                                                         │"
"│      Server: [ok]                                                  │"
"│      dessplay.brage.info:4433                                      │"
"│      Player:                                                       │"
"│      mpv                                                           │"
"│      Password:                                                     │"
"│                                                                    │"
"│      Media Roots: [ok]                                             │"
"│        /home/alice/anime [download]                                │"
"│                                                                    │"
"│      Ctrl-S to save                                                │"
"│                                                                    │"
"│                                                                    │"
"└────────────────────────────────────────────────────────────────────┘"
" Tab  Next field |  Shift-Tab  Prev field |  Ctrl-S  Save |  Esc  Canc"
