dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__users_all_ready.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Users ───────────────────────────────┐"
"│alice (you) [Ready]                   │"
"│bob [Ready]                           │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
