dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__users_mixed_states.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Users ───────────────────────────────┐"
"│alice (you) [Ready]                   │"
"│bob [Paused]                          │"
"│charlie [Not watching]                │"
"│dave [Downloading]                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
