dessplay/src/tui/snapshots/dessplay__tui__tests__snapshot_tests__users_no_peers.snap
---
source: dessplay/src/tui/tests.rs
expression: terminal.backend()
---
"┌ Users ───────────────────────────────┐"
"│No users connected                    │"
"│                                      │"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
